--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "mongodb": "^6.15.0",
-    "next": "15.2.2",
+    "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
@@ -31,7 +31,7 @@
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
-    "sweetalert2": "^11.17.2",
+    "sweetalert2": "^11.6.13",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
